# Ryujin

./: .gitignore  CMakeLists.txt
cmake/: copy_resources_to_target.cmake
include/kuraokami/: shader.h  shapes.h
src/Data/: QRTree.hs  QTree.hs  RTree.hs
src/kuraokami/: CMakeLists.txt  fragment.glsl  main.cpp  process_input.cpp  process_input.h  renderer.cpp  renderer.h  shader.c  shapes.c  vertex.glsl  window.cpp  window.h
